force-app/main/default/objects/Appointment__c/fields/Summary_Information_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Summary_Information_Minutes__c</fullName>
    <label>Summary Information Minutes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>