force-app/main/default/objects/Appointment__c/fields/Summary_Information_Units__c.field-meta.xml
<CustomField>
    <fullName>Summary_Information_Units__c</fullName>
    <description>Units shown with exercises</description>
    <inlineHelpText>Units shown with exercises</inlineHelpText>
    <label>Summary Information Units</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>