force-app/main/default/objects/Appointment__c/fields/Summary_Units__c.field-meta.xml
<CustomField>
    <fullName>Summary_Units__c</fullName>
    <label>Summary Units</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>