force-app/main/default/objects/Appointment__c/fields/Updated_with_Custom_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Updated_with_Custom_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated with Custom Metadata</label>
    <type>Checkbox</type>
</CustomField>