force-app/main/default/objects/Appointment__c/fields/UTM_Source_from_Intake__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_from_Intake__c</fullName>
    <formula>Intake__r.Marketing_UTM_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Source from Intake</label>
    <type>Text</type>
</CustomField>