force-app/main/default/objects/Appointment__c/fields/Visit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reason__c</fullName>
    <label>Visit Reason</label>
    <length>75</length>
    <type>Text</type>
</CustomField>