force-app/main/default/objects/Appointment__c/fields/Visit_Reason_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reason_Id__c</fullName>
    <label>Visit Reason Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>