force-app/main/default/objects/Appointment__c/fields/Visit_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Reason_Type__c</fullName>
    <formula>IF(CONTAINS(Visit_Reason__c, &quot;MD&quot;), &quot;MD&quot;, &quot;Not MD&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Reason Type</label>
    <type>Text</type>
</CustomField>