force-app/main/default/objects/Appointment__c/fields/VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>VOB_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOB Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>