force-app/main/default/objects/Appointment__c/recordTypes/For_Flowsheet.recordType-meta.xml
<RecordType>
    <fullName>For_Flowsheet</fullName>
    <active>true</active>
    <label>For Flowsheet</label>
</RecordType>