force-app/main/default/objects/Appointment__c/listViews/AppointMent_EmployerOutreachLV.listView-meta.xml
<ListView>
    <fullName>AppointMent_EmployerOutreachLV</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Appointment_Day__c</columns>
    <columns>Employer_Outreach_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employer_Outreach_Opportunity__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>AppointMent-EmployerOutreachLV</label>
</ListView>