force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Appointment.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Appointment</fullName>
    <columns>NAME</columns>
    <columns>Patient_s_Currently_Assigned_Staff__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Enter_FlowSheet_Link__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Location_Name__c</columns>
    <columns>VOB_Case__c</columns>
    <columns>Visit_Reason__c</columns>
    <columns>Visit_Reason_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My office Appointments-Bloomfield</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>