force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Appointments.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Appointments</fullName>
    <columns>NAME</columns>
    <columns>Patient_s_Currently_Assigned_Staff__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Enter_FlowSheet_Link__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Location_Name__c</columns>
    <columns>VOB_Case__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>BLOOMFIELD</value>
    </filters>
    <label>Bloomfield Appointments</label>
</ListView>