force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Assigned_Appointments.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Assigned_Appointments</fullName>
    <columns>NAME</columns>
    <columns>Patient_s_Currently_Assigned_Staff__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Enter_FlowSheet_Link__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Location__c</columns>
    <columns>VOB_Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Patient_s_Currently_Assigned_Staff__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Location_Id__c</field>
        <operation>equals</operation>
        <value>46964</value>
    </filters>
    <filters>
        <field>Visit_Reason_Type__c</field>
        <operation>equals</operation>
        <value>Not MD</value>
    </filters>
    <filters>
        <field>PriorityStatus__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Bloomfield Assigned Appointments</label>
</ListView>