force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Case_Management.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Case_Management</fullName>
    <columns>Patient__c</columns>
    <columns>Patient_Phone__c</columns>
    <columns>Visit_Reason__c</columns>
    <columns>Lead_Source_Text__c</columns>
    <columns>Out_of_Network_Deductible__c</columns>
    <columns>Fee_Schedule__c</columns>
    <columns>Allowance_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Visit_Reason__c</field>
        <operation>contains</operation>
        <value>NEW PATIENT,RETURNING,NEW ESTABLISHED</value>
    </filters>
    <filters>
        <field>Location_Name__c</field>
        <operation>notContain</operation>
        <value>MD</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>BLOOMFIELD</value>
    </filters>
    <label>Bloomfield Case Management</label>
</ListView>