force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Inreview_Appointments.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Inreview_Appointments</fullName>
    <booleanFilter>(1 OR 3) AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Patient_s_Currently_Assigned_Staff__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Enter_FlowSheet_Link__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Flowsheet__c</columns>
    <columns>Review_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Location_Id__c</field>
        <operation>equals</operation>
        <value>46964</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved – Pending Billing</value>
    </filters>
    <label>Bloomfield In Review Appointments</label>
</ListView>