force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Requires_Resubmission.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Requires_Resubmission</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Patient_s_Currently_Assigned_Staff__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Enter_FlowSheet_Link__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Review_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location_Id__c</field>
        <operation>equals</operation>
        <value>46964</value>
    </filters>
    <filters>
        <field>Appointment_Status__c</field>
        <operation>equals</operation>
        <value>Sent Back To Floor staff</value>
    </filters>
    <filters>
        <field>Visit_Reason_Type__c</field>
        <operation>equals</operation>
        <value>Not MD</value>
    </filters>
    <label>Bloomfield Requires Resubmission</label>
</ListView>