force-app/main/default/objects/Appointment__c/listViews/Bloomfield_Todays_Appointments.listView-meta.xml
<ListView>
    <fullName>Bloomfield_Todays_Appointments</fullName>
    <columns>NAME</columns>
    <columns>Patient_s_Currently_Assigned_Staff__c</columns>
    <columns>Provider_Name__c</columns>
    <columns>Enter_FlowSheet_Link__c</columns>
    <columns>Appointment_Date_Time__c</columns>
    <columns>Location__c</columns>
    <columns>VOB_Case__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Patient_Name__c</columns>
    <columns>Patient__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Appointment_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Location_Id__c</field>
        <operation>equals</operation>
        <value>46964</value>
    </filters>
    <filters>
        <field>Visit_Reason_Type__c</field>
        <operation>equals</operation>
        <value>Not MD</value>
    </filters>
    <label>Bloomfield Today&apos;s Appointments</label>
</ListView>